WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25921
REGRESSION: Using setTimeout.call or setTimeout.apply only works the first time is used
https://bugs.webkit.org/show_bug.cgi?id=25921
Summary
REGRESSION: Using setTimeout.call or setTimeout.apply only works the first ti...
Raul Hudea
Reported
2009-05-21 02:12:30 PDT
I'll add a test case
Attachments
Simple test case
(577 bytes, text/html)
2009-05-21 02:13 PDT
,
Raul Hudea
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Raul Hudea
Comment 1
2009-05-21 02:13:58 PDT
Created
attachment 30533
[details]
Simple test case
Mark Rowe (bdash)
Comment 2
2009-05-21 03:47:09 PDT
Seems like one of Oliver's recent optimisations may have introduced this.
Mark Rowe (bdash)
Comment 3
2009-05-21 03:47:26 PDT
<
rdar://problem/6910264
>
Mark Rowe (bdash)
Comment 4
2009-05-21 09:14:26 PDT
***
Bug 23670
has been marked as a duplicate of this bug. ***
Cameron Zwarich (cpst)
Comment 5
2009-05-21 14:02:45 PDT
This occurs in the 4.0 beta, so it's not Oliver's recent changes.
Oliver Hunt
Comment 6
2009-05-21 14:10:30 PDT
It also impacts the interpreter -- i think it may be a bug in op_resolve_global, but that doesn't explain why it only seems to effect .call and .apply
Oliver Hunt
Comment 7
2009-05-21 14:26:21 PDT
op_resolve_global is apparently broked.
Oliver Hunt
Comment 8
2009-05-21 15:03:58 PDT
Got it, we're caching a property on the global objects prototype chain as if it were directly on the global object
Oliver Hunt
Comment 9
2009-05-21 17:29:10 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M JavaScriptCore/ChangeLog M JavaScriptCore/interpreter/Interpreter.cpp M JavaScriptCore/jit/JITStubs.cpp M LayoutTests/ChangeLog A LayoutTests/fast/js/global-function-resolve-expected.txt A LayoutTests/fast/js/global-function-resolve.html A LayoutTests/fast/js/resources/global-function-resolve.js Committed
r44016
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug