<rdar://problem/6910264> REGRESSION: Cached DOM global object property access fails in browser (25921) <https://bugs.webkit.org/show_bug.cgi?id=25921>

Reviewed by Maciej Stachowiak.

When caching properties on the global object we need to ensure that we're
not attempting to cache through a shell object.


Canonical link: https://commits.webkit.org/35903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44016 268f45cc-cd09-0410-ab3c-d52691b4dbfc